# EncryptoCLI

./: .gitignore  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  decrypt_code.py  docs-setup.sh  encrypt_code.py  error_handler.py  gg.png.encrypto  hash_code.py  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requirements.txt  sitemap.xml
.github/workflows/: docs.yml  ossar-analysis.yml
LICENSE/: index.html
api/: index.html
api/encryption/: index.html
api/encryption/aes_cipher/: index.html
api/encryption/pgp/: index.html
api/error_handler/: index.html
api/interfaces/: index.html
api/interfaces/cli_handler/: index.html
api/interfaces/tui_handler/: index.html
api/main/: index.html
api/services/: index.html
api/steganography/: index.html
api/steganography/dct_handler/: index.html
api/steganography/lsb_handler/: index.html
api/utilities/: index.html
api/utilities/exceptions/: index.html
api/utilities/file_handling/: index.html
api/utilities/key_gen/: index.html
contributing/: index.html
demo-files/: README.md  credentials.txt  sample_data.txt  secret_message.txt
docs/: contributing.md  function-breakdown.md  getting-started.md  index.md
docs/api/: error_handler.md  index.md  interfaces.md  main.md  services.md
docs/api/encryption/: aes_cipher.md  index.md  pgp.md
docs/api/interfaces/: cli_handler.md  index.md  tui_handler.md
docs/api/steganography/: dct_handler.md  index.md  lsb_handler.md
docs/api/utilities/: exceptions.md  file_handling.md  index.md  key_gen.md
docs/stylesheets/: extra.css
docs/user-guide/: decryption.md  encryption.md  getting-started.md  hashing.md  index.md  pgp-key-management.md  pgp.md  steganography.md
encrypt/aes/: decrypt.py  encrypt.py
encryption/: __init__.py
encryption/aes/: __init__.py  cipher.py  decrypt.py  encrypt.py  tests.py
encryptocli/: __init__.py  __main__.py  decrypt_code.py  encrypt_code.py  error_handler.py  hash_code.py  main.py
encryptocli/encryption/: __init__.py
encryptocli/encryption/aes/: __init__.py  cipher.py  tests.py
encryptocli/encryption/pgp/: __init__.py  cipher.py
encryptocli/interfaces/: __init__.py  cli_handler.py  tui_handler.py
encryptocli/services/: __init__.py  decryption_service.py  encryption_service.py  hashing_service.py
encryptocli/steganography/: __init__.py
encryptocli/steganography/dct/: __init__.py  handler.py
encryptocli/steganography/lsb/: __init__.py  handler.py  tests.py
encryptocli/util/: exceptions.py  file_handling.py  key_gen.py
function-breakdown/: index.html
getting-started/: index.html
samples/: sample.txtencrypto
search/: search_index.json
steganography/lsb/: __init__.py  decrypt.py  encrypt.py  handler.py  tests.py
tests/: __init__.py  conftest.py
tests/encryption/: __init__.py
tests/encryption/aes/: __init__.py  test_cipher.py
tests/encryption/pgp/: __init__.py  test_cipher.py
tests/interfaces/: __init__.py  test_cli_handler.py
tests/services/: test_decryption_service.py  test_encryption_service.py  test_hashing_service.py
tests/util/: __init__.py  test_exceptions.py  test_file_handling.py  test_key_gen.py
user-guide/: index.html
user-guide/decryption/: index.html
user-guide/encryption/: index.html
user-guide/getting-started/: index.html
user-guide/hashing/: index.html
user-guide/pgp/: index.html
user-guide/pgp-key-management/: index.html
user-guide/steganography/: index.html
util/: exceptions.py  file_handling.py  key_gen.py  prompts.py
