[project]
name = "EncryptoCLI"
version = "0.4.0"
description = "A command-line program for encrypting, decrypting, and hashing files"
authors = [{name = "Arpan Pandey", email = "arpan@example.com"}]
maintainers = [{name = "Arpan Pandey", email = "arpan@example.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["encryption", "decryption", "hashing", "steganography", "cli", "cryptography"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "autopep8",
    "blake3",
    "cffi",
    "colorama",
    "crayons",
    "cryptography",
    "InquirerPy",
    "numpy",
    "opencv-python",
    "piexif",
    "Pillow",
    "pycodestyle",
    "pycparser",
    "pyfiglet",
    "Pygments",
    "python-gnupg",
    "regex",
    "scipy>=1.15.3",
    "six",
    "termcolor",
    "toml",
    "typer>=0.21.1",
    "wcwidth",
]

[project.urls]
Homepage = "https://github.com/Arpan-206/EncryptoCLI"
Repository = "https://github.com/Arpan-206/EncryptoCLI.git"
Documentation = "https://arpan-206.github.io/EncryptoCLI/"
Issues = "https://github.com/Arpan-206/EncryptoCLI/issues"

[project.scripts]
encryptocli = "encryptocli.main:main"

[project.optional-dependencies]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.92.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.92.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["encryptocli", "encryptocli.encryption", "encryptocli.encryption.aes", "encryptocli.encryption.pgp", "encryptocli.steganography", "encryptocli.steganography.lsb", "encryptocli.steganography.dct", "encryptocli.services", "encryptocli.interfaces", "encryptocli.util"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.py"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_mode = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
